--- a/tp.cabal
+++ b/tp.cabal
@@ -34,6 +34,8 @@ test-suite tp-test
   main-is:             Spec.hs
   build-depends:       base
                      , tp
+                     , QuickCheck
+                     , hspec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
