--- a/tp.cabal
+++ b/tp.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
                       ,Arbol23
+                      ,Diccionario
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
