--- a/tp.cabal
+++ b/tp.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Lib
                       ,Arbol23
                       ,Diccionario
+                      ,Tesoro
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
