--- a/tp.cabal
+++ b/tp.cabal
@@ -27,6 +27,7 @@ executable tp-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , HUnit
                      , tp
   default-language:    Haskell2010
 
@@ -43,4 +44,4 @@ test-suite tp-test
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/tp
+  location: https://github.com/gusajz/plp-func
